# epi-code

./: .gitignore  CMakeLists.txt  bighex_geometry.ai
CMakeModules/: ConfigFunctions.cmake
notes/: bighex.ai  bighex.ipynb  bighex_geometry.nb  maxSubarrayXOR.ipynb  sum_of_n_triangular_numbers.nb  zk_problems.ipynb
src/: exception.h  graph.h  iter.h  list.h  print.h  test.h
src/bitCount/: CMakeLists.txt  bitCount.cpp  bitCount_cstdio.cpp
src/cgalBoolean2D/: CMakeLists.txt  boolean2D.cpp  old_boolean2D.cpp  old_boolean2D_partition.cpp  print_utils.h
src/graphCycles/: CMakeLists.txt  graphCycles.cpp
src/listCycles/: CMakeLists.txt  listCycles.cpp
src/maxSubarrayXOR/: CMakeLists.txt  maxSubarrayXOR.cpp  maxSubarrayXOR_recursive.cpp  maxSubarrayXOR_triangular.cpp
src/mergeLists/: CMakeLists.txt  mergeLists.cpp
src/parity/: CMakeLists.txt  parity.cpp
src/partition/: CMakeLists.txt  partition.cpp
src/primitive_bit_count/: CMakeLists.txt  primitive_bit_count.cpp  primitive_bit_count_dowhile.cpp
